--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(UartReader)
 
-# Встановлюємо стандарт C++
 set(CMAKE_CXX_STANDARD 17)
 
 # Додаємо libserialport
@@ -15,15 +14,14 @@ endif()
 find_library(WIRINGPI_LIB wiringPi)
 if (NOT WIRINGPI_LIB)
     message(WARNING "wiringPi not found. Please install it using 'sudo apt install wiringpi'.")
-    set(WIRINGPI_LIB "/usr/lib/libwiringPi.so")  # Укажіть шлях вручну, якщо необхідно
+    set(WIRINGPI_LIB "/usr/lib/libwiringPi.so")  # Резервний шлях
 endif()
 
-# Додаємо шляхи до заголовків і бібліотек
-include_directories(${SERIALPORT_INCLUDE_DIRS})
-link_directories(${SERIALPORT_LIBRARY_DIRS})
+# Додаємо директорію Src до include
+include_directories(Src ${SERIALPORT_INCLUDE_DIRS})
 
 # Додаємо виконавчий файл
-add_executable(${PROJECT_NAME} main.cpp UartReader.cpp)
+add_executable(${PROJECT_NAME} main.cpp Src/UartReader.cpp)
 
-# Додаємо бібліотеки
+# Підключаємо бібліотеки
 target_link_libraries(${PROJECT_NAME} ${SERIALPORT_LIBRARIES} ${WIRINGPI_LIB})
