--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,18 @@ project(UartReader)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# Додаємо wiringPi
-find_library(WIRINGPI_LIB wiringPi REQUIRED)
+# Підключення Pigpio
+find_library(PIGPIO_LIB pigpio REQUIRED)
+find_library(PIGPIOD_IF2_LIB pigpiod_if2 REQUIRED)
 
-add_executable(${PROJECT_NAME} main.cpp Src/UartReader.cpp)
-target_link_libraries(${PROJECT_NAME} ${WIRINGPI_LIB})
+# Додаємо вихідний код
+add_executable(UartReader
+        main.cpp
+        Src/UartReader.cpp
+)
+
+# Лінкуємо Pigpio
+target_link_libraries(UartReader
+        ${PIGPIO_LIB}
+        ${PIGPIOD_IF2_LIB}
+)
