--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,14 @@ project(UartReader)
 
 set(CMAKE_CXX_STANDARD 17)
 
-# Підключення Pigpio
-find_library(PIGPIO_LIB pigpio REQUIRED)
-find_library(PIGPIOD_IF2_LIB pigpiod_if2 REQUIRED)
+# Додаємо WiringPi
+find_library(WIRINGPI_LIB wiringPi REQUIRED)
 
-# Додаємо вихідний код
+# Джерельні файли
 add_executable(UartReader
         main.cpp
         Src/UartReader.cpp
 )
 
-# Лінкуємо Pigpio
-target_link_libraries(UartReader
-        ${PIGPIO_LIB}
-        ${PIGPIOD_IF2_LIB}
-)
+# Лінкуємо WiringPi
+target_link_libraries(UartReader ${WIRINGPI_LIB})
